add dagger.ini,register is option
